<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FileListFragment"
    android:orientation="vertical"
    android:gravity="center" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/file_selector_text"
        android:layout_margin="@dimen/file_list_margin"/>

    <RadioGroup
        android:id="@+id/file_selector_radio_group"
        android:layout_width="@dimen/radio_group_width"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/file_selector_radio_button_1"
            android:layout_width="@dimen/radio_group_width"
            android:layout_height="@dimen/radio_button_size_height"
            android:text="@string/file_1_text"
            android:layout_margin="@dimen/file_list_margin"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/file_selector_radio_button_2"
            android:layout_width="@dimen/radio_group_width"
            android:layout_height="@dimen/radio_button_size_height"
            android:checked="false"
            android:layout_margin="@dimen/file_list_margin"
            android:text="@string/file_2_text" />

        <RadioButton
            android:id="@+id/file_selector_radio_button_3"
            android:layout_width="@dimen/radio_group_width"
            android:layout_height="@dimen/radio_button_size_height"
            android:checked="false"
            android:layout_margin="@dimen/file_list_margin"
            android:text="@string/file_3_text" />

        <RadioButton
            android:id="@+id/file_selector_radio_button_4"
            android:layout_width="@dimen/radio_group_width"
            android:layout_height="@dimen/radio_button_size_height"
            android:checked="false"
            android:layout_margin="@dimen/file_list_margin"
            android:text="@string/file_4_text" />

    </RadioGroup>

</LinearLayout>